syntax = 'proto2';
message SetSteeringAnglePayload {
  required fixed32 steering_angle = 1 [default = 0];
}