
message SetDacVoltagePayload {
  required fixed32 dac_id = 1 [default = 0];
  required fixed32 dac_channel = 2 [default = 0];
  required float voltage = 3 [default = 0];
}
